# rs-codec

./: .qubit-style-allowlist  Cargo.toml  README.md  README.zh_CN.md
src/: c_integer_literal_codec.rs  c_string_literal_codec.rs  codec.rs  decoder.rs  encoder.rs  lib.rs  prelude.rs
src/buffered/: buffered_convert_engine.rs  buffered_convert_hooks.rs  buffered_converter.rs  buffered_decode_engine.rs  buffered_decode_hooks.rs  buffered_decode_input.rs  buffered_decoder.rs  buffered_encode_engine.rs  buffered_encode_hooks.rs  buffered_encode_output.rs  buffered_encoder.rs  buffered_transcoder.rs  capacity_error.rs  codec_buffered_convert_hooks.rs  codec_buffered_converter.rs  codec_buffered_decode_hooks.rs  codec_buffered_decoder.rs  codec_buffered_encode_hooks.rs  codec_buffered_encoder.rs  convert_decode_attempt_result.rs  convert_decode_finish_result.rs  convert_encode_result.rs  convert_error_of.rs  convert_state.rs  convert_step_result.rs  decode_action.rs  decode_attempt.rs  decode_context.rs  decode_finish_after_emit.rs  decode_finish_step.rs  decode_state.rs  decode_step.rs  encode_attempt.rs  encode_context.rs  encode_plan.rs  encode_state.rs  encode_step.rs  finish_error.rs  mod.rs  pending_encode_step.rs  (+8 more)
src/byte_order/: big_endian.rs  byte_order.rs  byte_order_spec.rs  little_endian.rs  mod.rs
src/codec/: codec.rs  codec_convert_error.rs  codec_decode_error.rs  codec_decode_error_signal.rs  codec_decode_failure.rs  codec_decode_flush_error.rs  codec_decode_reset_error.rs  codec_decode_signal.rs  codec_encode_error.rs  codec_encode_flush_error.rs  codec_encode_reset_error.rs  convert_error_factory.rs  decode_error_factory.rs  decode_error_info.rs  decode_failure.rs  encode_error_factory.rs  mod.rs
src/coder/: coder.rs  coder_progress.rs  mod.rs
src/core/: codec_convert_error.rs  codec_decode_error.rs  codec_encode_error.rs
src/transcode/: buffer_contract_error.rs  capacity_error.rs  codec_phase.rs  convert_error.rs  decode_action.rs  decode_context.rs  decode_invalid_action.rs  encode_context.rs  encode_outcome.rs  encode_plan.rs  encode_value_result.rs  mod.rs  transcode_contract_error.rs  transcode_converter.rs  transcode_decoder.rs  transcode_encoder.rs  transcode_error.rs  transcode_progress.rs  transcode_status.rs  transcoder.rs
src/transcoder/: mod.rs  transcode_status.rs
src/util/: mod.rs  nz.rs  slice.rs
src/value/: codec_value_decoder.rs  codec_value_encoder.rs  codec_value_ext.rs  mod.rs  value_decoder.rs  value_encoder.rs
tests/: c_integer_literal_codec_tests.rs  c_string_literal_codec_tests.rs  codec_tests.rs  decoder_tests.rs  encoder_tests.rs  hex_codec_tests.rs  mod.rs  prelude_tests.rs  trait_tests.rs
tests/buffered/: buffered_convert_engine_tests.rs  buffered_decode_engine_tests.rs  buffered_decode_input_tests.rs  buffered_encode_engine_tests.rs  buffered_encode_output_tests.rs  buffered_traits_tests.rs  buffered_transcoder_tests.rs  codec_buffered_converter_tests.rs  codec_buffered_decoder_tests.rs  codec_buffered_encoder_tests.rs  decode_context_tests.rs  finish_error_tests.rs  (+5 more)
(+123 files in other folders)
